k8s/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: redpanda
          image: redpandadata/redpanda:v24.1.10
          args:
            - redpanda
            - start
            - --overprovisioned
            - --smp
            - "1"
            - --memory
            - 512M
            - --reserve-memory
            - 0M
            - --node-id
            - "0"
            - --check=false
            - --kafka-addr
            - PLAINTEXT://0.0.0.0:9092
            - --advertise-kafka-addr
            - PLAINTEXT://kafka:9092
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: collector
spec:
  selector:
    app: kafka
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
